feat: update hexo version & chic theme

--- a/themes/landscape/layout/_partial/footer.ejs
+++ b/themes/landscape/layout/_partial/footer.ejs
@@ -6,7 +6,7 @@
       &copy; <%= date(new Date(), 'YYYY') %> <%= config.author || config.title
       %><br />
       <%= __('powered_by') %>
-      <a href="http://www.beian.miit.gov.cn" target="_blank">Hexo</a>
+      <a href="http://beian.miit.gov.cn" target="_blank">Hexo</a>
     </div>
   </div>
 </footer>
